--- a/src/Components/BudgetCalculator/BudgetCalculator.module.css
+++ b/src/Components/BudgetCalculator/BudgetCalculator.module.css
@@ -2,6 +2,7 @@
     background-color: white;
     box-shadow:  0 0 5px rgba(0,0,0,.5), 2px 2px 5px rgba(0,0,0,.75);
     height: 80vh;
+    margin-top: 10vh;
     border-radius: 25px;
     outline: none !important;
 
