--- a/src/Components/RentCalculator/RentChart/RentChart.module.css
+++ b/src/Components/RentCalculator/RentChart/RentChart.module.css
@@ -18,8 +18,8 @@
 .buttonContainer{
     display: flex;
     justify-content: center;
-    margin-bottom: 4%;
-    margin-top: 5%;
+    /* margin-bottom: 4%; */
+    /* margin-top: 5%; */
     }
     
     .button{
